@@ -1,3 +1,7 @@
+Fri Oct 24 17:54:17 2008  Søren Sandmann  <sandmann@redhat.com>
+
+	* gnome-da-capplet.c (main): Fix to use gtk_init_with_args() correctly.
+
 Fri Oct 24 17:31:40 2008  Søren Sandmann  <sandmann@redhat.com>
 
 	* gnome-da-capplet.c (main): Replace use of gnome_program_init()
